tekton/install-tekton-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard-ingress
  labels:
    app: tekton-dashboard
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  generation: 1
spec:
  rules:
  - host: tekton-lab.idcf.jijiechen.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tekton-dashboard
          servicePort: 9097
